// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantForm renders participant form component 1`] = `
<div>
  <h3>
    Event participation form
  </h3>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="name"
      >
        name
        <input
          id="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
    </div>
    <div>
      <input
        type="submit"
        value="参加登録"
      />
    </div>
  </form>
</div>
`;

exports[`ParticipantForm renders participant form component with error message 1`] = `
<div>
  <h3>
    Event participation form
  </h3>
  <ul>
    <li>
      名前を入力して下さい
    </li>
  </ul>
  <form
    onSubmit={[Function]}
  >
    <div>
      <label
        htmlFor="name"
      >
        name
        <input
          id="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
    </div>
    <div>
      <input
        type="submit"
        value="参加登録"
      />
    </div>
  </form>
</div>
`;
